fixed nav on mobile

--- a/public/css/components/menu.less
+++ b/public/css/components/menu.less
@@ -113,16 +113,18 @@ header {
           transform: translate3d(0, 0, 0);
 }
 .menu__item {
+  position: relative;
+  right: 2em;
   opacity: 0;
-  -webkit-transform: translate3d(-15rem, 7rem, 0) scale(.5);
-          transform: translate3d(-15rem, 7rem, 0) scale(.5);
+  -webkit-transform: translate3d(0, 7rem, 0) scale(.5);
+          transform: translate3d(0, 7rem, 0) scale(.5);
   -webkit-transition: all 0.4s cubic-bezier(0.23, 1, 0.32, 1);
           transition: all 0.4s cubic-bezier(0.23, 1, 0.32, 1);
 }
 .menu__item--active {
   opacity: 1;
-  -webkit-transform: translate3d(-15rem, 0, 0) scale(1);
-          transform: translate3d(-15rem, 0, 0) scale(1);
+  -webkit-transform: translate3d(0, 0, 0) scale(1);
+          transform: translate3d(0, 0, 0) scale(1);
 }
 .menu__link, .menu__item a {
   display: inline-block;
@@ -205,5 +207,12 @@ header {
     height: 25vh;
     -webkit-transform: translate3d(100%, 0, 0);
             transform: translate3d(100%, 0, 0);
+  }
+  .apos-slideshow .apos-slideshow-image{
+    width: auto;
+    height: 25vh;
+  }
+  .apos-slideshow-item{
+    height: inherit;
   }
 }
